package ac.uk.brunel.contextaware;

option java_package = "ac.uk.brunel.contextaware.network.generated";

message UserList {
    required string meetingId = 1;
	repeated string btaddress = 2;
}